[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "classifier"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "LassMichLos", email = "quang.nguyen@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "numpy",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]

[project.urls]
Documentation = "https://github.com/LassMichLos/classifier#readme"
Issues = "https://github.com/LassMichLos/classifier/issues"
Source = "https://github.com/LassMichLos/classifier"

[tool.hatch.version]
path = "src/classifier/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/classifier tests}"

[tool.coverage.run]
source_pkgs = ["classifier", "tests"]
branch = true
parallel = true
omit = [
  "src/classifier/__about__.py",
]

[tool.coverage.paths]
classifier = ["src/classifier", "*/classifier/src/classifier"]
tests = ["tests", "*/classifier/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
